--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="Resume.pdf" class="fa-file-user"><span class="label">CV</span></a></li>
+						<li><a href="Resume.pdf.pdf" class="fa-file-user"><span class="label">CV</span></a></li>
 						<li><a href="https://www.facebook.com/samdimmortal" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/samdimmortal" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://github.com/samdimmortal" class="icon brands fa-github"><span class="label">Github</span></a></li>
