--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 										<h2>"Hello World", and beyond...</h2>
 										<p>Aspiring to be a successful professional by continuous learning, understanding and applying my skills for mutual benefit.<br/></p>
 									</header>
-								<p> Tea, spice and everything just right.<br/> Born in Bombay,India. <br/>Completed Bachelor's in Computer Science and Engineering currently pursuing Master's in Human-Computer Interaction from Uppsala University, Sweden.<br/> Can adapt to all conditions and turn it in favour. <br/>Willing to take decisions which turn out to be good for example coming from a hot, humid place to a cold, dark place to begin with. <br/> Using different technologies, and I love looking at problems from many	angles, Frank and honest opinions, gazing through a wide range of characters, people, experiences, and evaluate solutions. Fascinated by the things i learn everyday as little as knowing the pasting boiling time. 
+								<p> Tea, spice and everything just right.<br/> Born in Bombay, India. <br/>Completed Bachelor's in Computer Science and Engineering, currently pursuing Master's in Human-Computer Interaction from Uppsala University, Sweden.<br/>  Adapts to all conditions and turns it in favour. <br/>Willing to take decisions which turn out to be good for example coming from a hot, humid place to a cold, dark place to begin with. <br/> Using different technologies, and I love looking at problems from various perspectives, Frank and honest opinions, gazing through a wide range of characters, people, experiences, and evaluate solutions. Fascinated by the things I learn everyday as little as knowing the pasta boiling time. 
 								</p>
 								</div>
 							</section>
@@ -61,15 +61,15 @@
 								<div class="container">
 									<h3>Things I Can Do</h3>						
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Design & Analysis of Algorithms and codes </li>
-										<li class="icon solid fa-bug">try catching bugs</li>
-										<li class="icon solid fa-database">try to work with databases</li>
+										<li class="icon solid fa-code">Design & Analysis of Algorithms and Codes </li>
+										<li class="icon solid fa-bug">Catching bugs</li>
+										<li class="icon solid fa-database">Work with databases</li>
 										<li class="icon solid fa-user-check">Expert User Evaluations</li>
 										<li class="icon solid fa-people-carry">Team Work</li>
-										<li class="icon solid fa-smile">keep clients and colleagues happy </li>
+										<li class="icon solid fa-smile">Keep clients and colleagues happy </li>
 									</ul>
 
-								<p>Things i have covered during master's - Advanced Interaction Design, Advanced Visual Interfaces, Embodied Interaction, Human-Computer Interaction, Scientific Methods in Human-Computer Interaction, Usability Evaluation Methods, Perception and Visual Design, User-Centred Systems Design<br/>
+								<p>Concepts covered during master's program - Advanced Interaction Design, Advanced Visual Interfaces, Embodied Interaction, Human-Computer Interaction, Scientific Methods in Human-Computer Interaction, Usability Evaluation Methods, Perception and Visual Design, User-Centred Systems Design<br/>
 								Apart from Studies and smart obedient work.<br/>I like to go for camping, hiking, cycling, play the guitar, ride a motor bike, watch movies/tv shows and cook food.
 								</p>
 								</div>
