--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 					<ul>
 						<li><a href="#one" class="active">About Me</a></li>
 						<li><a href="#two">Things I can do</a></li>
-						<li><a href="#three">Small Accomplishments</a></li>
-						<!--li><a href="#four">my work</a></li-->
+						<li><a href="#three">Projects </a></li>
+						<li><a href="#four">my work</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -78,7 +78,7 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
+									<h3>A Few Projects</h3>
 									<p>One and half year of work experience in corporate world back in Mumbai, India and two years of volunteer work at västgöta nation (faternity) in Uppsala, Sweden.</br> Also achieved some medals in sports and a professional Martial artist (Shito ryu karate).</p>
 									<div class="features">
 										<article>
@@ -106,33 +106,19 @@
 								</div>
 							</section>
 
-						<!-- Four 
 							<section id="four">
 								<div class="container">
-									<h3>my works and query form?</h3>
+									<h3>Experience</h3>
+									
 									<p>phone: +46 760674925
 									Address: Uppsala, Sweden.</p>
 									click on the Email Icon on the right bottom to email me.
 
-									form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form!-->
 								</div>
 							</section>
 
 											
-											</div>
+								<!--/div-->
 
 				<!-- Footer -->
 					<section id="footer">
