--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 					<ul>
 						<li><a href="#one" class="active">About Me</a></li>
 						<li><a href="#two">Things I can do</a></li>
-						<li><a href="#three">Projects </a></li>
-						<li><a href="#four">my work</a></li>
+						<li><a href="#three">Experience </a></li>
+						<li><a href="#four">Projects</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -76,10 +76,10 @@
 							</section>
 
 						<!-- Three -->
-							<section id="three">
+							<section id="four">
 								<div class="container">
 									<h3>A Few Projects</h3>
-									<p>One and half year of work experience in corporate world back in Mumbai, India and two years of volunteer work at västgöta nation (faternity) in Uppsala, Sweden.</br> Also achieved some medals in sports and a professional Martial artist (Shito ryu karate).</p>
+									
 									<div class="features">
 										<article>
 											<a href="https://github.com/samdimmortal/be-project.git" class="image"><img src="images/pic01.jpg" alt="" /></a>
@@ -106,13 +106,11 @@
 								</div>
 							</section>
 
-							<section id="four">
+							<section id="three">
 								<div class="container">
 									<h3>Experience</h3>
+									<p>One and half year of work experience in corporate world back in Mumbai, India and two years of volunteer work at västgöta nation (faternity) in Uppsala, Sweden.</br> Also achieved some medals in sports and a professional martial artist (Shito ryu karate).</p>
 									
-									<p>phone: +46 760674925
-									Address: Uppsala, Sweden.</p>
-									click on the Email Icon on the right bottom to email me.
 
 								</div>
 							</section>
