--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<ul>
 						<li><a href="#one" class="active">About Me</a></li>
 						<li><a href="#two">Things I can do</a></li>
-						<li><a href="#three">Experience </a></li>
+						<li><a href="#three">Experience & Skills</a></li>
 						<li><a href="#four">Projects</a></li>
 					</ul>
 				</nav>
@@ -70,6 +70,7 @@
 									</ul>
 
 								<p>Concepts covered during master's program - Advanced Interaction Design, Advanced Visual Interfaces, Embodied Interaction, Human-Computer Interaction, Scientific Methods in Human-Computer Interaction, Usability Evaluation Methods, Perception and Visual Design, User-Centred Systems Design<br/>
+									•	Related coursework: Applied Mathematics, Computer Programming, Human Machine Interaction, Data Structures and Algorithms, Database Management Systems, Networking, Artificial Intelligence, Machine Learning. 
 								Apart from Studies and smart obedient work.<br/>I like to go for camping, hiking, cycling, play the guitar, ride a motor bike, watch movies/tv shows and cook food.
 								</p>
 								</div>
@@ -96,6 +97,15 @@
 											</div>
 										</article>
 										<!--article>
+											Thesis | Uppsala University | Phenomenological study on 360° views
+User Interface Designing Project | SAAB AB, Sweden | Innovative solution for mission trainer
+Non-Excluding Design Evaluation | Uppsala University | Technologies for specially abled & ADHD
+Visual interface evaluation |Uppsala University | Evaluations of snake game evolution
+Designing a user centered system | Uppsala University | Inventory system for a student nation
+Plotbot | Uppsala University | Library assistance robot
+Slack vs Discord |Uppsala University | User evaluation study on two communication software 
+Bachelor’s Project | A.C.Patil COE | Web crawler for news articles (Dust Problem)		
+
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Snapped dark matter in the wild</h4>
@@ -108,8 +118,18 @@
 
 							<section id="three">
 								<div class="container">
-									<h3>Experience</h3>
-									<p>One and half year of work experience in corporate world back in Mumbai, India and two years of volunteer work at västgöta nation (faternity) in Uppsala, Sweden.</br> Also achieved some medals in sports and a professional martial artist (Shito ryu karate).</p>
+									<h3>Experience & Skills</h3>
+									<p>One and half year of work experience in corporate world back in Mumbai, India and two years of volunteer work at västgöta nation (faternity) in Uppsala, Sweden.</br> Also achieved some medals in sports and a professional martial artist (Shito ryu karate).
+Volunteer Work | Västgöta Nation, Uppsala | (20 September 2018 – present)
+Operations Executive | Aptech Limited | (5th October 2015 – 6th April 2016)
+General Manager | Advance Carbon and Rotary components | (1st June 2013 – 4th June 2014)		
+Skills & Abilities
+•	C++, Java, SQL, basic Networking, SPSS, MSOffice, Interaction and Evaluation tools.
+•	Languages – Native (English, Hindi, Marathi), Basic Swedish (grundläggande/Lagom Svenska)
+•	Adaptable, Critical Thinker, Dedicated, Dependable, Designer, Flexible, Honest, Imaginative, Innovative, and Smart Labor.
+
+
+									</p>
 									
 
 								</div>
