--- a/index.html
+++ b/index.html
@@ -99,14 +99,15 @@
 								<div class="container">
 								<h3> Projects </h3>
 								<div class="features">
-	<!--article>
 											<article>
-											<a href="https" class="image"><img src="images/pic0.jpg" alt="" /></a>
+											<a href="https" class="image"><img src="images/360.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Master's Thesis </h4>
-												<p>Phenomenological study on 360° views.</p>
+												<p>Understanding the lived experiences of target users through vision technologies in everyday life.</br>
+A phenomenological investigation into user perception of vision technologies using youtube videos
+</p>
 											</div>
-										</article></article-->
+										</article>
 
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
