--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ A phenomenological investigation into user perception of vision technologies usi
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Designing for SAAB</h4>
-												<p>An Advance visual interfaces project that involved in making various icons fpr the existing system and desining new UI for their old fighter jet training simulator. </p>
+												<p>An Advance visual interfaces project that involved in making various icons for the existing system and designing new UI for their old fighter jet training simulator. </p>
 											</div>
 										</article>
 										<article>
