--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 										<h2>"Hello World", and beyond...</h2>
 										<p>Aspiring to be a successful professional by continuous learning, understanding and applying my skills for mutual benefit.<br/></p>
 									</header>
-								<p> Tea, spice and everything just right.<br/> Born in Bombay, India. <br/>Completed Bachelor's in Computer Science and Engineering, currently pursuing Master's in Human-Computer Interaction from Uppsala University, Sweden.<br/>  Adapts to all conditions and turns it in favour. <br/>Willing to take decisions which turn out to be good for example coming from a hot, humid place to a cold, dark place to begin with. <br/> Using different technologies, and I love looking at problems from various perspectives, Frank and honest opinions, gazing through a wide range of characters, people, experiences, and evaluate solutions. Fascinated by the things I learn everyday as little as knowing the pasta boiling time. 
+								<p> Tea, spice and everything just right.<br/>Currently pursuing Master's in Human-Computer Interaction from Uppsala University, Sweden.<br/> Jack of all trades and Bachelor in Computer Science and Engineering. <br/>  Adaptive to all conditions and turning them into positive outcomes. <br/> Willing to take decisions which turn out to be advantageous, for example, a personal decision - coming from a hot, humid place to a cold, dark place to begin my adventures. <br/> Using different technologies, understanding and interpreting problems from various perspectives.<br/> Gazing through a wide range of characters, people, experiences, and evaluating solutions, providing frank and honest opinions. <br/>Fascinated by the things I learn everyday; little as knowing the correct pasta boiling times or complicated things like flying a JAS Gripen using simulator.
 								</p>
 								</div>
 							</section>
@@ -61,17 +61,19 @@
 								<div class="container">
 									<h3>Things I Can Do</h3>						
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">Design & Analysis of Algorithms and Codes </li>
+										<li class="icon solid fa-code">Designing Algorithms</li>
+										<li class="icon solid fa-code">Analysis of Algorithms</li>
 										<li class="icon solid fa-bug">Catching bugs</li>
-										<li class="icon solid fa-database">Work with databases</li>
+										<li class="icon solid fa-database">Administrating databases</li>
 										<li class="icon solid fa-user-check">Expert User Evaluations</li>
-										<li class="icon solid fa-people-carry">Team Work</li>
-										<li class="icon solid fa-smile">Keep clients and colleagues happy </li>
+										<li class="icon solid fa-people-carry">Lead Teams and Collaborative Work</li>
+										<li class="icon solid fa-smile">Making clients and colleagues happy </li>
+									
 									</ul>
 
-								<p>Concepts learnt during master's program -<br/> Advanced Interaction Design, Advanced Visual Interfaces, Embodied Interaction, Human-Computer Interaction, Scientific Methods in Human-Computer Interaction, Usability Evaluation Methods, Perception and Visual Design, User-Centred Systems Design<br/>
-								Concepts learnt during bachelor's program -<br/> Applied Mathematics, Computer Programming, Human Machine Interaction, Data Structures and Algorithms, Database Management Systems, Networking, Artificial Intelligence, Machine Learning, and more.<br/> 
-								Apart from studies and smart obedient work.<br/>Camping, hiking, cycling, playing the guitar, riding a motor bike, watching movies/tv shows and cooking food are among some other activies of interest.
+								<p><h3>Concepts learnt during master's program -</h3> Advanced Interaction Design, Advanced Visual Interfaces, Embodied Interaction, Human-Computer Interaction, Scientific Methods in Human-Computer Interaction, Usability Evaluation Methods, Perception and Visual Design, User-Centred Systems Design<br/>
+								<h3>Concepts learnt during bachelor's program -</h3> Applied Mathematics, Computer Programming, Human Machine Interaction, Data Structures and Algorithms, Database Management Systems, Networking, Artificial Intelligence, Machine Learning, and more.<br/> 
+								<h4>Apart from studies and smart obedient work.</h4>Camping, hiking, cycling, playing the guitar, riding a motor bike, watching movies/tv shows and cooking food are among some other activies of interest.
 								</p>
 								</div>
 							</section>
@@ -79,16 +81,18 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Experience & Skills</h3>
+									<h3>Experience</h3>
 									<p>One and half year of work experience in corporate world back in Mumbai, India </br> Two years of volunteer work at västgöta nation (faternity) in Uppsala, Sweden.</br> 
 									Volunteer Work | Västgöta Nation, Uppsala | (20 September 2018 – present) </br>
 									Operations Executive | Aptech Limited | (5th October 2015 – 6th April 2016)</br>
 									General Manager | Advance Carbon and Rotary components | (1st June 2013 – 4th June 2014) </br>		
 									Also achieved some medals in sports and a professional martial artist (Shito ryu karate do).
 								</p>
-								<p>Skills & Abilities </br>
-								•	C++, Java, SQL, basic Networking, SPSS, MSOffice, Interaction and Evaluation tools.</br>
-								•	Languages – Native (English, Hindi, Marathi), Basic Swedish (grundläggande/Lagom Svenska) </br>
+								<p><h3>Skills</h3>
+								•	C++, Java, SQL, Basic Networking, SPSS, MSOffice</br>
+								•	Trained but uncertified in B2B, SCRUM, Agile methodology and waterfall model for development.</br>
+								•	Human Interaction obersver and Evaluator.</br>
+								•	Languages– Native (English, Hindi, Marathi), Basic Swedish (grundläggande/Lagom Svenska) </br>
 								•	Adaptable, Critical Thinker, Dedicated, Dependable, Designer, Flexible, Honest, Imaginative, Innovative, and Smart Labor.</br>
 								</p>
 								</div>
